# ai-codereview

./: .codereview.yml  .env.example  .gitignore  INSTALL.md  LICENSE  README.md  USAGE.md  baseline.py  build_mac.sh  config.py  cr.sh  eval.py  llm_client.py  parser.py  preprocessor.py  prompts.py  pyproject.toml  quickstart.sh  requirements.txt  review.py  setup_cython.py  tools.py
.github/workflows/: test.yml
golden_dataset/clean/: no_issues.py
golden_dataset/logic/: null_pointer.py  race_condition.go
golden_dataset/performance/: n_plus_one.py
golden_dataset/security/: hardcoded_secret.py  sql_injection.py  xss_vulnerability.js
tests/: conftest.py  test_core.py
